--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "pg": "^8.7.3",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "pg-format": "^1.0.4"
   },
   "jest": {
     "setupFilesAfterEnv": [
